--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>ccs3Tabs -- by HKing</title>
 		<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
 		<style type="text/css"> 
-			.tabs {width: 520px;height: 410px; list-style: none;position: relative;padding: 0px;margin: 0px;color:#fff;}
+			.tabs {width: 100%;max-width:520px; height: 410px; list-style: none;position: relative;padding: 0px;margin: 0px;color:#fff;}
 			.tabs:after{display: block;content: " ";width: 0px;height: 0px;clear: both;float: none;}
 			.tabs label{float: left;display: block;width: 33.3333333333333333333333%;height: 50px;}
 			.tabs input[type="radio"]{display: none;}
