--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			.tabs input[type=radio]:checked + em:before{height: 200px;opacity: 0;}
 		</style>
 	</head>
-	<body style="padding:0px;">
+	<body style="padding:0px;margin:0px;">
 		<h2>纯css3实现的tab选项卡</h2>
 		<div class="tabs">
 	        <label >
