--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			.tabs label{display: block;height: 50px; font-size: 18px;text-align: center;background: #0276BC;cursor: pointer;}
 			.tabs .tab-content{z-index: 2;display: none;overflow: hidden;width: -webkit-calc(100% - 13px * 2);height: 332px;line-height: 24px;padding: 12px;position: absolute;top: 50px;left: 0;border: solid #0276BC 1px;border-top: none;color: #000000;text-align: left;cursor: default;font-weight: normal;}
 			.tabs input[type=radio]:checked ~ .tab-content{display: block;}
-			.tabs label em{display: block;overflow: hidden; width: 100%;height: 100%;line-height: 2.6em; font-style: normal;position: relative; }
+			.tabs label em{display: block;width: 100%;height: 100%;line-height: 2.6em; font-style: normal;position: relative; }
 			.tabs label em:after{display: block;content: " ";width: 0%;height: 4px;background-color: #FF4081;-webkit-transition: all 0.3s ease-in-out;-moz-transition: all 0.3s ease-in-out;transition: all 0.3s ease-in-out;margin: 0px auto 0 auto;}
 			.tabs input[type=radio]:checked + em:after{width: 100%;}
 			.tabs label em:before{display: none;z-index: 1;content: " ";position: absolute;top: 50%;left: 50%;width: 0;height: 0; border-radius: 50%; background-color: #f8f8f8;opacity: 0.6;-webkit-transition: all 0.3s ease-in-out;-moz-transition: all 0.3s ease-in-out;transition: all 0.3s ease-in-out;}
@@ -21,7 +21,7 @@
 			.tabs input[type=radio]:checked + em:before{
 				width: 240px;
 				height: 240px;
-				top: -60px;
+				top: -90px;
 				left: -50px;
 				opacity: 0;
 
