--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</style>
 	</head>
 	<body style="background:#f6f6f6;overflow:hidden;">
-		<h2>纯css3实现的tab选项卡</h2>
+		<h3>纯css3实现的tab选项卡(Material Design风格)</h3>
 		<div class="tabs">
 	        <label >
 	        	<input type="radio" name="tabs" checked />
