--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	        	</em>
 		        <div class="tab-content">
 		        	<img style="width:100%;" src="http://d3.freep.cn/3tb_16051014451625ue564436.jpg" alt="">
-					<p style="text-align:right;margin: 4px 0 0 0;color:#4e4e4e;">2013 蒙自.南湖</p>
+					<p style="text-align:right;margin: 4px 0 0 0;color:#4e4e4e;">2013 蒙自·南湖</p>
 		        </div>
 	        </label>
 	        <label >
