--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			.tabs label{float: left;display: block;width: calc(100% / 3);height: 50px;}
 			.tabs input[type="radio"]{display: none;}
 			.tabs label{display: block;height: 50px; font-size: 18px;text-align: center;background: #0276BC;cursor: pointer;}
-			.tabs .tab-content{z-index: 2;display: none;overflow: hidden; width: calc(100% - 13px * 2);min-height: 350px;line-height: 14px;padding: 12px;position: absolute;top: 50px;left: 0;border: solid #ffffff 1px;border-top: none;color: #000000;text-align: left;cursor: default;font-weight: normal; font-size: 14px;background: #ffffff;box-shadow: 3px 3px 8px rgba(0,0,0,.04),-3px 0 8px rgba(0,0,0,.04);}
+			.tabs .tab-content{z-index: 2;display: none;overflow: hidden; width: calc(100% - 13px * 2);min-height: 260px;line-height: 14px;padding: 12px;position: absolute;top: 50px;left: 0;border: solid #ffffff 1px;border-top: none;color: #000000;text-align: left;cursor: default;font-weight: normal; font-size: 14px;background: #ffffff;box-shadow: 3px 3px 8px rgba(0,0,0,.04),-3px 0 8px rgba(0,0,0,.04);}
 			.tabs input[type=radio]:checked ~ .tab-content{display: block;}
 			.tabs label em{display: block;width: 100%;height: 100%;line-height: 2.6em; font-style: normal;position: relative; }
 			.tabs label em:after{display: block;content: " ";width: 0%;height: 3px;background-color: #ff4081;-webkit-transition: all 0.3s ease-in-out;-moz-transition: all 0.3s ease-in-out;transition: all 0.3s ease-in-out;position: absolute;left: 50%;bottom: 0px;}
@@ -26,11 +26,11 @@
 		<div class="tabs">
 	        <label >
 	        	<input type="radio" name="tabs" checked />
-	        	<em class="title">『 微微的希望 』</em>
+	        	<em class="title">『 希望 』</em>
 	        	<div class="tab-content">
-					<section style="writing-mode: tb-rl;letter-spacing:3px;">
-						<p>微微的希望</p>
-						<p style="text-align:right;">--孤城</p>
+					<section style="writing-mode: tb-rl;letter-spacing:3px;float:right;">
+						<p style="font-size:16px;">「微微的希望」</p>
+						<p style="text-align:right;color:#636363;">--孤城</p>
 			        	<p>我和无数 </p>
 			        	<p>不能孵化的卵石</p>
 			        	<p>垒在一起</p>
