--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	        	<input type="radio" name="tabs" checked />
 	        	<em class="title">『 希望 』</em>
 	        	<div class="tab-content">
-					<section style="writing-mode: tb-rl;letter-spacing:3px;float:right;">
+					<section style="writing-mode: tb-rl;letter-spacing:3px;float:right;margin-top:10px;">
 						<p style="font-size:16px;">「微微的希望」</p>
 						<p style="text-align:right;color:#636363;">--孤城</p>
 			        	<p>我和无数 </p>
@@ -41,7 +41,6 @@
 			        	<p>只希望草能够延长</p>
 			        	<p>它的影子</p>
 					</section>
-
 		        </div>
 	        </label>
 	        <label  >
@@ -70,5 +69,6 @@
 		        </div>
 	        </label>
 		</div>
+		<a href="https://github.com/unclehking/css3Tabs"> >> Github repository</a>
 	</body>
 </html>
