--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		        </div>
 	        </label>
 		</div>
-		<a href="https://github.com/unclehking/css3Tabs" title="Github下载" style="width:50px;height:50px;border-radius:50%;background:#FF4081;text-align:center;box-shadow:3px 3px 8px rgba(0,0,0,.2);position:fixed;right:8px;bottom:8px;" >
+		<a href="https://github.com/unclehking/css3Tabs" title="Github下载" style="width:50px;height:50px;border-radius:50%;background:#FF4081;text-align:center;box-shadow:3px 3px 8px rgba(0,0,0,.2);position:fixed;left:8px;bottom:8px;" >
 			<svg version="1.1" x="0px" y="0px" width="20px" height="50px" fill="#ffffff" viewBox="0 0 22.714 29.606" style="enable-background:new 0 0 22.714 29.606;" xml:space="preserve">
 				<g>
 					<path d="M10.448,24.289c0.225,0.256,0.542,0.423,0.908,0.423c0.003,0,0.007-0.003,0.011-0.003c0.003,0,0.007,0.003,0.011,0.003c0.313,0,0.626-0.119,0.865-0.358L22.356,14.24c0.478-0.477,0.478-1.252,0-1.729c-0.478-0.478-1.251-0.478-1.729,0l-8.048,8.049V1.222C12.579,0.546,12.032,0,11.356,0s-1.223,0.546-1.223,1.222v19.304l-8.047-8.015c-0.479-0.478-1.253-0.47-1.73,0.005c-0.477,0.478-0.474,1.251,0.004,1.729L10.448,24.289z"/>
