--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</style>
 	</head>
 	<body style="background:#f6f6f6;overflow:hidden;">
-		<img src="http://unclehking.github.io/css3Tabs/hking.png" alt="HKingShareIcon">
+		<img src="http://unclehking.github.io/css3Tabs/hking.png" alt="HKingShareIcon" style="display:none;">
 		<h4>纯css3实现的tab选项卡(Material Design风格)</h4>
 		<div class="tabs">
 	        <label >
