--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
 		        </div>
 	        </label>
 		</div>
-
-		<img src="http://unclehking.github.io/css3Tabs/hking.png?01" alt="HKingShareIcon" style="height:0;width:0">
+		<div style="display:none;">
+			<img src="http://unclehking.github.io/css3Tabs/hking.png?01" alt="HKingShareIcon" />
+		</div>
 		<a href="https://github.com/unclehking/css3Tabs" title="Github下载" style="width:52px;height:50px;border-radius:50%;background:#FF4081;text-align:center;box-shadow:3px 3px 8px rgba(0,0,0,.2);position:fixed;left:16px;bottom:16px;z-index: 998;" >
 			<svg version="1.1" x="0px" y="0px" width="20px" height="50px" fill="#ffffff" viewBox="0 0 22.714 29.606" style="enable-background:new 0 0 22.714 29.606;" xml:space="preserve">
 				<g>
