--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</style>
 	</head>
 	<body style="background:#f6f6f6;overflow:hidden;">
-		<div style="display:none;">
+		<div>
 			<img src="http://unclehking.github.io/css3Tabs/hking.png?01" alt="HKingShareIcon" />
 		</div>
 		<h4>纯css3实现的tab选项卡(Material Design风格)</h4>
