--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 		</style>
 	</head>
 	<body style="background:#f6f6f6;overflow:hidden;">
-		<div style="width:0px;height:0px;overflow:hidden;">
-			<img src="http://unclehking.github.io/css3Tabs/hking.png?01" alt="HKingShareIcon" />
-		</div>
+		<img src="http://unclehking.github.io/css3Tabs/hking.png?01" alt="HKingShareIcon" style="width:0px;height:0px;overflow:hidden;" />
 		<h4>纯css3实现的tab选项卡(Material Design风格)</h4>
 
 		<div class="tabs">
