--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			.tabs input[type=radio]:checked + em:after{width: 100%;left: 0px;}
 			.tabs label em:before{display: none;z-index: 1;content: " ";position: absolute;top: 50%;left: 50%;width: 0;height: 0; border-radius: 50%; background-color: #f8f8f8;opacity: 0.6;-webkit-transition: all 0.5s ease-in-out;-moz-transition: all 0.5s ease-in-out;transition: all 0.5s ease-in-out;}
 			.tabs label em:hover:before{display: block;}
-			.tabs input[type=radio]:checked + em:before{width: 240px;height: 240px;top: -90px;left: -50px;opacity: 0;}
+			.tabs input[type=radio]:checked + em:before{width:240px;height:240px;left:calc(-120px + 50%);top:calc(-120px + 50%);opacity: 0;}
 		</style>
 	</head>
 	<body style="background:#f6f6f6;overflow:hidden;">
