--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>ccs3Tabs -- by HKing</title>
+		<title>纯css3实现选项卡 -- by HKing</title>
 		<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
 		<style type="text/css">
 			*{-webkit-tap-highlight-color:rgba(255,0,0,0);}
