--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	        	<div class="tab-content">
 					<section style="writing-mode: tb-rl;letter-spacing:3px;float:right;margin-top:10px;">
 						<p style="font-size:16px;">「微微的希望」</p>
-						<p style="text-align:right;color:#636363;">--孤城</p>
+						<p style="text-align:right;color:#636363;">孤城</p>
 			        	<p>我和无数 </p>
 			        	<p>不能孵化的卵石</p>
 			        	<p>垒在一起</p>
