--- a/bt.html
+++ b/bt.html
@@ -8,6 +8,9 @@
 		</style>
 	</head>
 	<body>
+		<div style="width:0px;height:0px;overflow:hidden;">
+			<img src="http://unclehking.github.io/css3Tabs/hking.svg" alt="HKingShareIcon" style="width:300px;height:300px;" />
+		</div>
 		<img src="bt.jpg" alt="" style="width:100%;" />
 	</body>
 </html>
